# console-backend

./: .gitignore  main.py  pyproject.toml  requirements.txt  run.py  test.db
alembic/: env.py
alembic/versions/: 4289208ac96c_invalid_token_table_added.py  95069073950d_1_st_commit_opt_table_created.py  a3045a22ac2d_3_rd_commit.py  a993ad1e2f64_invalid_token_table_added.py  f2bb0b8af3ce_2nd_commit_role_tenent_and_user_tables_.py
src/: config.py  database.py  main.py
src/authentication/models/: invalidtoken.py  otp.py
src/authentication/routes/: login.py  register.py
src/authentication/schema/: login.py  register.py
src/authentication/utils/: auth.py  mailer.py  utils.py
src/database/: database.py  model.py
src/tenent/models/: role.py  roleusermapping.py  tenent.py  user.py
src/tenent/routes/: user_management.py
src/tenent/schema/: tenent_user.py
