[project]
name = "console-backent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
  "bcrypt>=4.0.1,<5.0.0",
      "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
