[project]
name = "console-backent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "sqlalchemy>=2.0.45",
    "pydantic[email]>=2.12.5",
    "aiosqlite>=0.22.0",
    "alembic>=1.17.2",
    "bcrypt>=4.0.1,<5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.123.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "slowapi>=0.1.9",
    "unicorn>=2.1.4",
    "uvicorn>=0.38.0",
]
